--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -195,11 +195,11 @@
     <Content Include="Views\Modules\DailyActivity\umSubmitActivity_DBI.aspx" />
     <Content Include="Views\Modules\DailyActivity\umSubmitActivity_IRM.aspx" />
     <Content Include="Views\Modules\DailyActivity\umWeatherTab.aspx" />
-    <Content Include="Views\Modules\Overhead\umGeneralLedgerByOrganization.aspx" />
+    <Content Include="Views\Modules\Overhead\umOverheadGeneralLedger.aspx" />
     <Content Include="Views\Modules\Overhead\umOverheadBudgetTypes.aspx" />
     <Content Include="Views\Modules\Overhead\umOverheadOrganizationSecurity.aspx" />
     <Content Include="Views\Modules\Overhead\umOverheadSecurity.aspx" />
-    <Content Include="Views\Modules\Overhead\Views\umAddGLAccountRange.aspx" />
+    <Content Include="Views\Modules\Overhead\umAddGLAccountRange.aspx" />
     <Content Include="Views\Modules\Overhead\umAddRemoveBudgetType.aspx" />
     <Content Include="Views\Modules\Overhead\Views\umBudgetTypesByLegalEntity.aspx" />
     <Content Include="Views\Modules\Overhead\Views\umGeneralLedgerAccounts.aspx" />
@@ -701,12 +701,12 @@
       <DependentUpon>umWeatherTab.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\ValidationChecks.cs" />
-    <Compile Include="Views\Modules\Overhead\umGeneralLedgerByOrganization.aspx.cs">
-      <DependentUpon>umGeneralLedgerByOrganization.aspx</DependentUpon>
+    <Compile Include="Views\Modules\Overhead\umOverheadGeneralLedger.aspx.cs">
+      <DependentUpon>umOverheadGeneralLedger.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Modules\Overhead\umGeneralLedgerByOrganization.aspx.designer.cs">
-      <DependentUpon>umGeneralLedgerByOrganization.aspx</DependentUpon>
+    <Compile Include="Views\Modules\Overhead\umOverheadGeneralLedger.aspx.designer.cs">
+      <DependentUpon>umOverheadGeneralLedger.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\Overhead\umOverheadBudgetTypes.aspx.cs">
       <DependentUpon>umOverheadBudgetTypes.aspx</DependentUpon>
@@ -729,11 +729,11 @@
     <Compile Include="Views\Modules\Overhead\umOverheadSecurity.aspx.designer.cs">
       <DependentUpon>umOverheadSecurity.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Views\Modules\Overhead\Views\umAddGLAccountRange.aspx.cs">
+    <Compile Include="Views\Modules\Overhead\umAddGLAccountRange.aspx.cs">
       <DependentUpon>umAddGLAccountRange.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Modules\Overhead\Views\umAddGLAccountRange.aspx.designer.cs">
+    <Compile Include="Views\Modules\Overhead\umAddGLAccountRange.aspx.designer.cs">
       <DependentUpon>umAddGLAccountRange.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\Overhead\umAddRemoveBudgetType.aspx.cs">
