--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -197,7 +197,9 @@
     <Content Include="Views\Modules\DailyActivity\umWeatherTab.aspx" />
     <Content Include="Views\Modules\Overhead\umOverheadGeneralLedger.aspx" />
     <Content Include="Views\Modules\Overhead\umOverheadBudgetTypes.aspx" />
+    <Content Include="Views\Modules\Overhead\umOverheadMaintainBudgets.aspx" />
     <Content Include="Views\Modules\Overhead\umOverheadOrganizationSecurity.aspx" />
+    <Content Include="Views\Modules\Overhead\umOverheadPeriods.aspx" />
     <Content Include="Views\Modules\Overhead\umOverheadSecurity.aspx" />
     <Content Include="Views\Modules\Overhead\umAddGLAccountRange.aspx" />
     <Content Include="Views\Modules\Overhead\umAddRemoveBudgetType.aspx" />
@@ -712,12 +714,26 @@
     <Compile Include="Views\Modules\Overhead\umOverheadBudgetTypes.aspx.designer.cs">
       <DependentUpon>umOverheadBudgetTypes.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Views\Modules\Overhead\umOverheadMaintainBudgets.aspx.cs">
+      <DependentUpon>umOverheadMaintainBudgets.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\Overhead\umOverheadMaintainBudgets.aspx.designer.cs">
+      <DependentUpon>umOverheadMaintainBudgets.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Modules\Overhead\umOverheadOrganizationSecurity.aspx.cs">
       <DependentUpon>umOverheadOrganizationSecurity.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Views\Modules\Overhead\umOverheadOrganizationSecurity.aspx.designer.cs">
       <DependentUpon>umOverheadOrganizationSecurity.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\Overhead\umOverheadPeriods.aspx.cs">
+      <DependentUpon>umOverheadPeriods.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\Overhead\umOverheadPeriods.aspx.designer.cs">
+      <DependentUpon>umOverheadPeriods.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\Overhead\umOverheadSecurity.aspx.cs">
       <DependentUpon>umOverheadSecurity.aspx</DependentUpon>
