EV-73 Moved over all of admin, entry, and billing queries to DBI.Data Made all queries IQueryable. Added viewport to all pages where needed. Added some small mark up changes to make pages flow nicer.

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -303,6 +303,7 @@
     <Compile Include="MTL_TRANSACTION_INT_V.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="Oracle\CROSSING_MAINTENANCE.cs" />
     <Compile Include="Oracle\TIMECLOCK.cs" />
     <Compile Include="Oracle\CUSTOMER_SURVEYS.cs" />
     <Compile Include="Oracle\BUDGETBIDDING.cs" />
