Added Comment table and update detail table

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -354,6 +354,9 @@
     <Compile Include="ORG_HIER_V.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="OVERHEAD_ACCOUNT_COMMENT.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
     <Compile Include="OVERHEAD_BUDGET_DETAIL.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
