--- a/DBI.Data.Test/DBI.Data.Test.csproj
+++ b/DBI.Data.Test/DBI.Data.Test.csproj
@@ -117,6 +117,7 @@
     <Compile Include="OVERHEAD_BUDGET_TYPETest.cs" />
     <Compile Include="Class1Test.cs" />
     <Compile Include="CROSSINGSTest.cs" />
+    <Compile Include="OVERHEAD_ORG_BUDGETSTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SYS_USER_PROFILE_OPTIONSTest.cs" />
     <Compile Include="TIME_CLOCKTest.cs" />
