--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -202,10 +202,14 @@
     <Content Include="Views\Modules\DailyActivity\umSubmitActivity_DBI.aspx" />
     <Content Include="Views\Modules\DailyActivity\umSubmitActivity_IRM.aspx" />
     <Content Include="Views\Modules\DailyActivity\umWeatherTab.aspx" />
+    <Content Include="Views\Modules\Overhead\excel.xsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Views\Modules\Overhead\umAddGLAccountForCategory.aspx" />
     <Content Include="Views\Modules\Overhead\umAddOverheadDetailLine.aspx" />
     <Content Include="Views\Modules\Overhead\umBudgetMain.aspx" />
     <Content Include="Views\Modules\Overhead\umEditBudget.aspx" />
+    <Content Include="Views\Modules\Overhead\umImportActualsWindow.aspx" />
     <Content Include="Views\Modules\Overhead\umOpenBudgetType.aspx" />
     <Content Include="Views\Modules\Overhead\umOverheadBudgetPeriods.aspx" />
     <Content Include="Views\Modules\Overhead\umOverheadGeneralLedger.aspx" />
@@ -216,6 +220,7 @@
     <Content Include="Views\Modules\Overhead\umAddGLAccountRange.aspx" />
     <Content Include="Views\Modules\Overhead\umAddRemoveBudgetType.aspx" />
     <Content Include="Views\Modules\Overhead\umAccountCategory.aspx" />
+    <Content Include="Views\Modules\Overhead\umViewActualsWindow.aspx" />
     <Content Include="Views\Modules\Security\Options\AddEdit\umAddEditProfileOptions.aspx" />
     <Content Include="Views\Modules\Security\umEditGroups.aspx" />
     <Content Include="Views\Modules\Security\umEditModules.aspx" />
@@ -239,6 +244,9 @@
     <Content Include="Views\uxDefault.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Views\Modules\Overhead\csv.xsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="Web.APPDEV.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -769,6 +777,13 @@
     <Compile Include="Views\Modules\Overhead\umEditBudget.aspx.designer.cs">
       <DependentUpon>umEditBudget.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Views\Modules\Overhead\umImportActualsWindow.aspx.cs">
+      <DependentUpon>umImportActualsWindow.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\Overhead\umImportActualsWindow.aspx.designer.cs">
+      <DependentUpon>umImportActualsWindow.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Modules\Overhead\umOpenBudgetType.aspx.cs">
       <DependentUpon>umOpenBudgetType.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -838,6 +853,13 @@
     </Compile>
     <Compile Include="Views\Modules\Overhead\umAccountCategory.aspx.designer.cs">
       <DependentUpon>umAccountCategory.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\Overhead\umViewActualsWindow.aspx.cs">
+      <DependentUpon>umViewActualsWindow.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\Overhead\umViewActualsWindow.aspx.designer.cs">
+      <DependentUpon>umViewActualsWindow.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\Security\Options\AddEdit\umAddEditProfileOptions.aspx.cs">
       <DependentUpon>umAddEditProfileOptions.aspx</DependentUpon>
