EV-377 Table changes for Customer Survey

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -188,6 +188,9 @@
     <Compile Include="CUSTOMER_SURVEY_QUESTIONS.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="CUSTOMER_SURVEY_QUES_CAT.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
     <Compile Include="CUSTOMER_SURVEY_QUES_TYPES.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
