Worked on Import Actual Data Code

--- a/DBI.Data.Test/DBI.Data.Test.csproj
+++ b/DBI.Data.Test/DBI.Data.Test.csproj
@@ -125,6 +125,7 @@
     <Compile Include="ServiceUnitDataTest.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="UnitTest2.cs" />
+    <Compile Include="UnitTest3.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DBI.Core\DBI.Core.csproj">
