--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -54,6 +54,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\EXT\Ext.Net.Utilities.dll</HintPath>
     </Reference>
+    <Reference Include="iTextSharp">
+      <HintPath>..\lib\iTextSharp.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\EXT\Newtonsoft.Json.dll</HintPath>
